# hydro-bot

./: rush.json
common/config/rush/: pnpm-lock.yaml
discord.js/: package.json
discord.js/src/client/: BaseClient.js  Client.js
discord.js/src/client/voice/: ClientVoiceManager.js  StreamConnection.js  VoiceConnection.js
discord.js/src/client/websocket/: WebSocketManager.js  WebSocketShard.js
discord.js/src/errors/: Messages.js
discord.js/src/structures/: VoiceChannel.js
discord.js/src/util/: Constants.js
discord.js/typings/: index.d.ts
hydro-bot/: .gitignore  package.json  tsconfig.json
hydro-bot/config/: config.json  config_example.json
hydro-bot/src/: CommandHandler.ts  EmbedFactory.ts  Logger.ts  bot.ts
hydro-bot/src/commands/: Command.ts  CommandHandler.ts  Help.ts  Leave.ts  NowPlaying.ts  Play.ts  Queue.ts  Skip.ts  Volume.ts  help.ts  leave.js  nowplaying.js  play.js  queue.js  skip.js  volume.js
hydro-bot/src/downloader/: DownloadModule.ts  Downloader.ts  RawUrlDownloader.ts  YtdlDownloader.ts
hydro-bot/src/guild/: GuildConfig.ts  GuildState.ts
hydro-bot/src/modules/: Logger.ts  MessageSender.ts
hydro-bot/src/ui/: PuppeteerCapture.ts
obs-node/: CMakeLists.txt  package.json
obs-node/scripts/: build.sh
obs-node/src/: index.ts
obs-node/src/cpp/: AudioEncoder.cpp  AudioEncoder.h  Output.cpp  Output.h  OutputService.cpp  OutputService.h  Scene.cpp  Scene.h  SceneItem.cpp  SceneItem.h  Settings.cpp  Settings.h  Source.cpp  Source.h  StreamOutput.cpp  StreamOutput.h  StreamOutputInternal.cpp  StreamOutputInternal.h  Studio.cpp  Studio.h  VideoEncoder.cpp  VideoEncoder.h  main.cpp  main.h  utils.h
playwright-video/src/: PageVideoStream.ts  ScreencastFrameCollector.ts  index.ts  streamVideo.ts
puppeteer-stream-extension/: background.js  manifest.json  package.json
web-ui/: package.json
web-ui/public/: index.html
web-ui/src/: App.css  App.tsx  index.css
web-ui/src/components/: Card.tsx  MusicUI.tsx  NextUp.tsx  Track.tsx
(+10 files in other folders)
